--- a/figma/index.html
+++ b/figma/index.html
@@ -1,1 +1,24 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Site</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preload" href="https://htmlacademy.ru/fonts/roboto.woff2" as="font">
+</head>
+<body>
+    <div class="block">
+        <diV class="layer">
+            <b>Blog</b> <b>Press</b> <b>Join Us</b>
+        </diV>
+        
+    </div>
+
+</body>
+
+<footer>
+    <p>
+
+    </p>
+</footer>
+</html>
