--- a/figma/index.html
+++ b/figma/index.html
@@ -8,17 +8,40 @@
 </head>
 <body>
     <div class="block">
-        <diV class="layer">
+        <div class="layer">
             <b>Blog</b> <b>Press</b> <b>Join Us</b>
-        </diV>
+        </div>
+    </div>   
         
+    <div class="lock">
+        <div class="box">
+            <h5>BUSINESS thoughts 💭</h5>
+        </div>
+
+        <div class="box3">
+            <h1>For founders on building, growing, and selling your brand.</h1>
+        </div>
     </div>
 
+    <div>
+        <div>
+            <p>Explore the brands joining Pattern Brands, the sales process & the founders behind them.👇🏽</p>
+        </div>
+        <div>
+            
+        </div>
+    </div>
+
+  
+    <div class="footer">
+        <div>
+            <p>CONTACT</p>
+        </div>
+
+        <b>We're focused on building brands and a better future.</b>
+        <b>If you'd like to partner with us, we're</b>
+        <b>here</b>
+        <b>to talk.</b>
+    </div>
 </body>
-
-<footer>
-    <p>
-
-    </p>
-</footer>
 </html>
