--- a/figma/index.html
+++ b/figma/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Site</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="preload" href="https://htmlacademy.ru/fonts/roboto.woff2" as="font">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="https://ai-icon.top/imgs/45c23320-6f9c-4260-acd4-0d5137677037.png">
 </head>
 <body>
     <div class="block">
