--- a/figma/index.html
+++ b/figma/index.html
@@ -23,16 +23,16 @@
 
     </header>   
 
-    <div class="lock">
-        <div>
-            <h5>BUSINESS thoughts 💭</h5>
+    <div class="join">
+        <div class="lock">
+            <p>BUSINESS THOUGHTS 💭</p>
         </div>
-<!-- 
-        <div class="box3">
-            <h1>For founders on building, growing, and selling your brand.</h1>
-        </div>
-    </div>
 
+        <div class="brand">
+            <p>For founders on building, growing, and selling your brand.</p>
+        </div> 
+    </div>
+<!-- 
     <div>
         <div>
             <p>Explore the brands joining Pattern Brands, the sales process & the founders behind them.👇🏽</p>
@@ -53,6 +53,6 @@
             <b>here</b>
             <b>to talk.</b>
         </div>
-    </footer> -->
+    </footer> --> 
 </body>
 </html>
