--- a/figma/index.html
+++ b/figma/index.html
@@ -53,7 +53,7 @@
             <img src="image/IMAGE.png" alt="1" />
           </div>
           <h3>GIR: One Year In</h3>
-          <p>Case Study</p>
+          <p>Case Stud</p>
         </div>
         <div class="card">
           <div class="imgContainer">
