--- a/figma/index.html
+++ b/figma/index.html
@@ -50,54 +50,70 @@
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE.png" alt="1" />
+            <img src="image/IMAGE (1).png" alt="1" />
           </div>
-          <h3>GIR: One Year In</h3>
-          <p>Case Stud</p>
+          <h3>Introducing Onsen</h3>
+          <p>new additions</p>
+        </div>
+        <div class="card">
+          <div class="imgContainerRight">
+            <img src="image/IMAGE (5).png" alt="1" />
+          </div>
+          <h3>Selling Your Shopify Brand: An Introduction</h3>
+          <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE.png" alt="1" />
+            <img src="image/IMAGE (3).png" alt="1" />
           </div>
-          <h3>GIR: One Year In</h3>
-          <p>Case Study</p>
+          <h3>5 Reasons We Are Optimistic for 2023</h3>
+          <p>MERGERS & ACQUISITIONS 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE.png" alt="1" />
+            <img src="image/IMAGE (4).png" alt="1" />
           </div>
-          <h3>GIR: One Year In</h3>
-          <p>Case Study</p>
+          <h3>Why Right Now is a Great Time to Sell Your Brand</h3>
+          <p>MERGERS & ACQUISITIONS 101</p>
+        </div>
+        <div class="card">
+          <div class="imgContainerRight">
+            <img src="image/IMAGE (5).png" alt="1" />
+          </div>
+          <h3>Selling Your Shopify Brand: Week 1</h3>
+          <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE.png" alt="1" />
+            <img src="image/IMAGE (6).png" alt="1" />
           </div>
-          <h3>GIR: One Year In</h3>
-          <p>Case Study</p>
+          <h3>Pattern's 2022 Update</h3>
+          <p>THOUGHT LEADERSHIP</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE.png" alt="1" />
+            <img src="image/IMAGE (7).png" alt="1" />
           </div>
-          <h3>GIR: One Year In</h3>
-          <p>Case Study</p>
+          <h3>Introducing Yield</h3>
+          <p>New Additions</p>
+        </div>
+        <div class="card">
+          <div class="imgContainerRight">
+            <img src="image/IMAGE (8).png" alt="1" />
+          </div>
+          <h3>Introducing Poketo</h3>
+          <p>new additions</p>
         </div>
       </div>
     </main>
-
-    <!-- 
     <footer>
-        <div>
-            <div>
-                <p>CONTACT</p>
-            </div>
-
-            <b>We're focused on building brands and a better future.</b>
-            <b>If you'd like to partner with us, we're</b>
-            <b>here</b>
-            <b>to talk.</b>
+      <div>
+        <div class="textFooter">
+          <p>CONTACT</p>
         </div>
-    </footer>  -->
+        <p>We're focused on building brands and a better future.</p>
+        <p>If you'd like to partner with us, we're here to talk.</p>
+      </div>
+    </footer>
   </body>
 </html>
