--- a/figma/index.html
+++ b/figma/index.html
@@ -107,13 +107,38 @@
       </div>
     </main>
     <footer>
-      <div>
-        <div class="textFooter">
-          <p>CONTACT</p>
-        </div>
-        <p>We're focused on building brands and a better future.</p>
-        <p>If you'd like to partner with us, we're here to talk.</p>
+      <div class="wrapper">
+        <div >
+          <p class="textFooter">CONTACT</p>
+          <h4>We're focused on building brands and a better future. If you'd like to partner with us, we're here to talk.</h4>
+        
       </div>
+        <dl class="partsFooter">
+          <dd>Open Spaces</dd>
+          <dd>GIR</dd>
+          <dd>Letterfolk</dd>
+          <dd>Yield</dd>
+          <dd>Poketo</dd>
+          <dd>Equal Parts</dd>
+        </dl>
+
+        <dl class="pressFooter">
+          <dd>Careers</dd>
+          <dd>Press</dd>
+        </dl>
+
+        <dl class="twitterFooter">
+          <dd>Instagram</dd>
+          <dd>Twitter</dd>
+        </dl>
+
+        <dl class="comFooter">
+          <dd>228 Park Ave S.</dd>
+          <dd>New York, NY 10003</dd>
+          <dd>acquisitions@patternbrands.com</dd>
+        </dl>
+<br>
+        <p>© 2022 Pattern Brands</p>
     </footer>
   </body>
 </html>
