--- a/figma/index.html
+++ b/figma/index.html
@@ -18,9 +18,9 @@
   <body>
     <header class="wrapper">
       <nav class="wrapperHeader">
-        <a href="index.html" title="Blog">Blog</a>
+        <a href="blog.html" title="Blog">Blog</a>
 
-        <a href="press.html" title="Press">Press</a>
+        <a href="index.html" title="Press">Press</a>
 
         <a href="join.html" title="Join us">Join Us</a>
       </nav>
@@ -50,56 +50,56 @@
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (1).png" alt="1" />
+            <img src="image/IMAGE (1).png" alt="2" />
           </div>
           <h3>Introducing Onsen</h3>
           <p>new additions</p>
         </div>
         <div class="card">
-          <div class="imgContainerRight">
-            <img src="image/IMAGE (5).png" alt="1" />
+          <div class="imgContainer">
+            <img src="image/IMAGE (5).png" alt="3" />
           </div>
           <h3>Selling Your Shopify Brand: An Introduction</h3>
           <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (3).png" alt="1" />
+            <img src="image/IMAGE (3).png" alt="4" />
           </div>
           <h3>5 Reasons We Are Optimistic for 2023</h3>
           <p>MERGERS & ACQUISITIONS 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (4).png" alt="1" />
+            <img src="image/IMAGE (4).png" alt="5" />
           </div>
           <h3>Why Right Now is a Great Time to Sell Your Brand</h3>
           <p>MERGERS & ACQUISITIONS 101</p>
         </div>
         <div class="card">
-          <div class="imgContainerRight">
-            <img src="image/IMAGE (5).png" alt="1" />
+          <div class="imgContainer">
+            <img src="image/IMAGE (5).png" alt="6" />
           </div>
           <h3>Selling Your Shopify Brand: Week 1</h3>
           <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (6).png" alt="1" />
+            <img src="image/IMAGE (6).png" alt="7" />
           </div>
           <h3>Pattern's 2022 Update</h3>
           <p>THOUGHT LEADERSHIP</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (7).png" alt="1" />
+            <img src="image/IMAGE (7).png" alt="8" />
           </div>
           <h3>Introducing Yield</h3>
           <p>New Additions</p>
         </div>
         <div class="card">
-          <div class="imgContainerRight">
-            <img src="image/IMAGE (8).png" alt="1" />
+          <div class="imgContainer">
+            <img src="image/IMAGE (8).png" alt="9" />
           </div>
           <h3>Introducing Poketo</h3>
           <p>new additions</p>
@@ -107,38 +107,46 @@
       </div>
     </main>
     <footer>
-      <div class="wrapper">
-        <div >
+      <div class="wrapperFooter">
+        <div>
           <p class="textFooter">CONTACT</p>
-          <h4>We're focused on building brands and a better future. If you'd like to partner with us, we're here to talk.</h4>
-        
+          <h4>
+            We're focused on building brands and a better future. If you'd like
+            to partner with us, we're here to talk.
+          </h4>
+        </div>
+        <div class="partsFooter">
+          <dl class="parts">
+            <dd>Open Spaces</dd>
+            <dd>GIR</dd>
+            <dd>Letterfolk</dd>
+            <dd>Yield</dd>
+            <dd>Poketo</dd>
+            <dd>Equal Parts</dd>
+          </dl>
+
+          <dl class="parts">
+            <dd>Careers</dd>
+            <dd>Press</dd>
+          </dl>
+
+          <dl class="parts">
+            <dd>Instagram</dd>
+            <dd>Twitter</dd>
+          </dl>
+
+          <dl class="partsCom">
+            <dd>228 Park Ave S.</dd>
+            <dd>New York, NY 10003</dd>
+            <dd>acquisitions@patternbrands.com</dd>
+          </dl>
+        </div>
+
+        <hr class="line" />
+        <div class="brands">
+          <p class="wrapperFooter">© 2022 Pattern Brands</p>
+        </div>
       </div>
-        <dl class="partsFooter">
-          <dd>Open Spaces</dd>
-          <dd>GIR</dd>
-          <dd>Letterfolk</dd>
-          <dd>Yield</dd>
-          <dd>Poketo</dd>
-          <dd>Equal Parts</dd>
-        </dl>
-
-        <dl class="pressFooter">
-          <dd>Careers</dd>
-          <dd>Press</dd>
-        </dl>
-
-        <dl class="twitterFooter">
-          <dd>Instagram</dd>
-          <dd>Twitter</dd>
-        </dl>
-
-        <dl class="comFooter">
-          <dd>228 Park Ave S.</dd>
-          <dd>New York, NY 10003</dd>
-          <dd>acquisitions@patternbrands.com</dd>
-        </dl>
-<br>
-        <p>© 2022 Pattern Brands</p>
     </footer>
   </body>
 </html>
