--- a/figma/index.html
+++ b/figma/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Site</title>
+    <title>Figma</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -102,7 +102,7 @@
             <img src="image/IMAGE (8).png" alt="9" />
           </div>
           <h3>Introducing Poketo</h3>
-          <p>new additions</p>
+          <p>New additions</p>
         </div>
       </div>
     </main>
