--- a/figma/index.html
+++ b/figma/index.html
@@ -53,7 +53,7 @@
             <img src="image/IMAGE (1).png" alt="2" />
           </div>
           <h3>Introducing Onsen</h3>
-          <p>new additions</p>
+          <p>New Additions</p>
         </div>
         <div class="card">
           <div class="imgContainer">
@@ -67,14 +67,14 @@
             <img src="image/IMAGE (3).png" alt="4" />
           </div>
           <h3>5 Reasons We Are Optimistic for 2023</h3>
-          <p>MERGERS & ACQUISITIONS 101</p>
+          <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
             <img src="image/IMAGE (4).png" alt="5" />
           </div>
           <h3>Why Right Now is a Great Time to Sell Your Brand</h3>
-          <p>MERGERS & ACQUISITIONS 101</p>
+          <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
@@ -88,7 +88,7 @@
             <img src="image/IMAGE (6).png" alt="7" />
           </div>
           <h3>Pattern's 2022 Update</h3>
-          <p>THOUGHT LEADERSHIP</p>
+          <p>Thought Leadership</p>
         </div>
         <div class="card">
           <div class="imgContainer">
@@ -102,7 +102,7 @@
             <img src="image/IMAGE (8).png" alt="9" />
           </div>
           <h3>Introducing Poketo</h3>
-          <p>New additions</p>
+          <p>New Additions</p>
         </div>
       </div>
     </main>
@@ -112,7 +112,7 @@
           <p class="textFooter">CONTACT</p>
           <h4>
             We're focused on building brands and a better future. If you'd like
-            to partner with us, we're here to talk.
+            to partner with us, we're <a href="">here</a> to talk.
           </h4>
         </div>
         <div class="partsFooter">
