--- a/figma/index.html
+++ b/figma/index.html
@@ -43,63 +43,63 @@
       <div class="cardContainer">
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE.png" alt="1" />
+            <img src="image/IMAGE.jpg" alt="1" />
           </div>
           <h3>GIR: One Year In</h3>
           <p>Case Study</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (1).png" alt="2" />
+            <img src="image/IMAGE (1).jpg" alt="2" />
           </div>
           <h3>Introducing Onsen</h3>
           <p>New Additions</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (5).png" alt="3" />
+            <img src="image/IMAGE (5).jpg" alt="3" />
           </div>
           <h3>Selling Your Shopify Brand: An Introduction</h3>
           <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (3).png" alt="4" />
+            <img src="image/IMAGE (3).jpg" alt="4" />
           </div>
           <h3>5 Reasons We Are Optimistic for 2023</h3>
           <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (4).png" alt="5" />
+            <img src="image/IMAGE (4).jpg" alt="5" />
           </div>
           <h3>Why Right Now is a Great Time to Sell Your Brand</h3>
           <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (5).png" alt="6" />
+            <img src="image/IMAGE (5).jpg" alt="6" />
           </div>
           <h3>Selling Your Shopify Brand: Week 1</h3>
           <p>Mergers & Acquisitions 101</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (6).png" alt="7" />
+            <img src="image/IMAGE (6).jpg" alt="7" />
           </div>
           <h3>Pattern's 2022 Update</h3>
           <p>Thought Leadership</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (7).png" alt="8" />
+            <img src="image/IMAGE (7).jpg" alt="8" />
           </div>
           <h3>Introducing Yield</h3>
           <p>New Additions</p>
         </div>
         <div class="card">
           <div class="imgContainer">
-            <img src="image/IMAGE (8).png" alt="9" />
+            <img src="image/IMAGE (8).jpg" alt="9" />
           </div>
           <h3>Introducing Poketo</h3>
           <p>New Additions</p>
