--- a/figma/Decbase/index.html
+++ b/figma/Decbase/index.html
@@ -8,7 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -17,8 +23,83 @@
     />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <nav class="wrHeader">
+        <a class="home" href="error.html" title="home">home</a>
+
+        <a href="error.html" title="project">project</a>
+
+        <a href="error.html" title="services">services</a>
+
+        <a href="error.html" title="about">about</a>
+
+        <a href="error.html" title="blog">blog</a>
+
+        <a href="error.html" title="shop">shop</a>
+
+        <a href="error.html" title="contact">contact</a>
+
+        <a class="sign_up" href="error.html" title="sign up">sign up</a>
+      </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+      <div class="wrFooter">
+        <div>
+          <p class="menu">CONTACT</p>
+          <h4>
+            But i must explain to you all this mistaken idea of dencouncing pleasure.
+          </h4>
+        </div>
+        <div class="partsFooter">
+          <dl class="menu">
+            <dd>Quick Links</dd>
+            <dd>About Our Company</dd>
+            <dd>Services WE provide</dd>
+            <dd>Career & Opportunity</dd>
+            <dd>Privacy & policy</dd>
+            <dd>Contact US</dd>
+          </dl>
+
+            
+            <dl class="menu">
+            <dd>Company</dd>
+            <dd>About Company</dd>
+            <dd>Our Testimonials</dd>
+            <dd>Latest News</dd>
+            <dd>Our misson</dd>
+            <dd>Get a free Quot</dd>
+          </dl>
+
+          
+
+
+
+
+          <dl class="menu">
+            <dd>Contact us</dd>
+            <dd>Sagrada Familia, Herba</dd>
+            <dd>Street Front USA</dd>
+            <dd>brandoxide@gmail.com</dd>
+            <dd>002-568423591</dd>
+          </dl>
+
+          <dl class="followUs">
+            <img src="" alt="f">
+            <img src="" alt="tw">
+            <img src="" alt="ins">
+            <img src="" alt="in">
+          </dl>
+        </div>
+
+        <hr class="line" />
+        <div class="brands">
+          <p class="wrFooter">Copyright @ 2020 <a class="Brandoxide" href="error.html" title="Brandoxide">Brandoxide</a>.all right reserved.</p>
+        </div>
+      </div>
+    </footer>
+    </footer>
   </body>
 </html>
