--- a/figma/Decbase/index.html
+++ b/figma/Decbase/index.html
@@ -23,8 +23,13 @@
     />
   </head>
   <body>
-    <header>
+    <header class="wrapper">
       <nav class="wrHeader">
+        <div class="logo">
+          <img  src="/Decbase/image/logo.png" alt="logo"> 
+        </div>
+        
+        <div class="navigation"> 
         <a class="home" href="error.html" title="home">home</a>
 
         <a href="error.html" title="project">project</a>
@@ -41,8 +46,9 @@
 
         <a class="sign_up" href="error.html" title="sign up">sign up</a>
       </nav>
+    </div>
     </header>
-    <main>
+    <main class="wrapper">
 
     </main>
     <footer>
@@ -72,12 +78,6 @@
             <dd>Our misson</dd>
             <dd>Get a free Quot</dd>
           </dl>
-
-          
-
-
-
-
           <dl class="menu">
             <dd>Contact us</dd>
             <dd>Sagrada Familia, Herba</dd>
@@ -87,10 +87,10 @@
           </dl>
 
           <dl class="followUs">
-            <img src="" alt="f">
-            <img src="" alt="tw">
-            <img src="" alt="ins">
-            <img src="" alt="in">
+            <img src="/Decbase/image/faceb.png" alt="f">
+            <img src="/Decbase/image/twiter.png" alt="tw">
+            <img src="/Decbase/image/inst.png" alt="ins">
+            <img src="/Decbase/image/in.png" alt="in">
           </dl>
         </div>
 
